--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImdbTest.getCountryName()[pri:2, instance:ImdbTest@52b06bef]">getCountryName</td> 
-  <td>main@295372946</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:25</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ImdbTest.tearDown()[pri:0, instance:ImdbTest@52b06bef]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@295372946</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:25</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ImdbTest.setup()[pri:0, instance:ImdbTest@52b06bef]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@295372946</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:25</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ImdbTest.tearDown()[pri:0, instance:ImdbTest@52b06bef]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@295372946</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:25</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ImdbTest.setup()[pri:0, instance:ImdbTest@52b06bef]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@295372946</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/12/03 20:24:14</td>   <td>-11797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImdbTest.getReleaseDate()[pri:1, instance:ImdbTest@52b06bef]">getReleaseDate</td> 
-  <td>main@295372946</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:56:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WikiTest.setup()[pri:0, instance:WikiTest@43dac38f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1076641925</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:56:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WikiTest.setup()[pri:0, instance:WikiTest@43dac38f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1076641925</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:57:04</td>   <td>9274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WikiTest.tearDown()[pri:0, instance:WikiTest@43dac38f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1076641925</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:56:49</td>   <td>-5771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WikiTest.getReleaseDate()[pri:1, instance:WikiTest@43dac38f]">getReleaseDate</td> 
+  <td>main@1076641925</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:56:55</td>   <td>754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WikiTest.getCountryName()[pri:2, instance:WikiTest@43dac38f]">getCountryName</td> 
+  <td>main@1076641925</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/12/04 14:57:04</td>   <td>9274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WikiTest.tearDown()[pri:0, instance:WikiTest@43dac38f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1076641925</td>   <td></td> </tr>
 </table>
